--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,95 @@
-.App {
-  text-align: center;
+:root{
+  --main-color: #5ea3d0;
+  --secondary-color: white;
+  --main-text-color: #3e5869;
+  --secondary-text-color: #b0c7d6;
+  --send-message-form: #f5f5f5;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+html, body{
+height: 100%;
+margin: 0;
+padding: 0;
+font-family: system-ui;
+font-weight:200;
+color: #3e5869
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#root{
+  height: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+.app{
+  display: grid;
+  height: 100%;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 60px;
+  grid-tmplate-areas:
+  "r m m m m m"
+  "r m m m m m"
+  "r m m m m m"
+  "r m m m m m"
+  "r m m m m m"
+  "n s s s s s"
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.new-room-form{
+  grid-area: n;
+}
+
+.rooms-list{
+grid-area: r;
+}
+
+.message-list{
+  grid-area: m;
   }
-  to {
-    transform: rotate(360deg);
+
+  .send-mesage-form{
+    grid-area: s;
   }
-}
+
+  .rooms-list{
+    box-sizing: border-box;
+    padding: 10px;
+    background-color: var(--main-color);
+   
+    height: 100%;
+  }
+
+  .rooms-list ul {
+    list-style-type: none;
+    padding: 0;
+  
+  }
+
+  .rooms-list li {
+    margin: 10px 0;
+  }
+
+  .rooms-list h3{
+    margin: 5px 0;
+    color: var(--secondary-color)
+  }
+
+  .rooms-list .room a {
+    color: var(--secondary-text-color);
+    font-weight: 600;
+    text-decoration: none;
+  }
+
+  .rooms-list .room.active a {
+    color: var(--secondary-color);
+  }
+
+  .new-room-form{
+padding:0 5px;
+background: var(--secondary-color);
+color: var(--main-text-color);
+  }
+
+  .new-room-form form {
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
